# Discord-Bot-Codebase

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
data/local/: games.json
src/classes/: __init__.py  client.py  embed.py
src/commands/: __init__.py  client.py  devtools.py  testing.py
src/commands/client_commands/: __init__.py  help.py  report_bug.py
src/commands/devtool_commands/: __init__.py
src/commands/test_commands/: __init__.py  lets_play.py
src/controller/: __init__.py  event_listener.py
src/utils/: __init__.py  client_profile.py
